# gpgui

./: .clang-format  CMakeLists.txt  LICENSE  Makefile  README.md  gpgui.spec
src/: CMakeLists.txt  Runner.cpp  config.h.in  gpgui.pro  main.cpp
src/gui/: MainWindow.cpp  REG_DWORD_Dialog.cpp
src/gui/include/: MainWindow.h  REG_BINARY_Dialog.h  REG_DWORD_BE_Dialog.h  REG_DWORD_Dialog.h  REG_EXPAND_SZ_Dialog.h  REG_LINK_Dialog.h  REG_MULTI_SZ_Dialog.h  REG_NONE_Dialog.h  REG_QWORD_Dialog.h  REG_QWORD_LE_Dialog.h  REG_RESOURCE_LIST_Dialog.h  REG_RESOURCE_REQ_LIST_Dialog.h  REG_SZ_Dialog.h
src/include/: Runner.h
src/libgptbackend/: CMakeLists.txt  README.md  config.h.in  main.cpp
src/libgptbackend/include/: registry.h
src/libgptbackend/preg/: iconv_wrapper.cpp  preg_data.cpp  preg_parser.cpp  preg_writer.cpp
src/libgptbackend/preg/include/: iconv_wrapper.h  preg_data.h  preg_parser.h  preg_writer.h
src/libgptbackend/reg/: reg.cpp
src/libgptbackend/reg/include/: reg.h
src/libgptbackend/sambaxml/include/: preg_xml.h
src/libgptbackend/test/: main.cpp  test_preg_data.cpp  test_preg_writer.cpp
